[feature]  create model, controller & api for user auth
