# app/Models/User.php
@@ -6,10 +6,35 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Passport\HasApiTokens;
+
+/* ----- SWAGGER OA --------- */
+/**
+ * @OA\Schema(
+ *      title="user",
+ *      description="Properties of model user",
+ *      required={"name", "email", "password"},
+ * 	    @OA\Property(
+ *          property="name",
+ *          type="string",
+ *          example="Levron Abigail"
+ *      ),
+ *      @OA\Property(
+ *          property="email",
+ *          type="string",
+ *          example="levron.abigail@gmail.com"
+ *      ),
+ *      @OA\Property(
+ *          property="password",
+ *          type="string",
+ *          example="l3vg41L"
+ *      )
+ * )
+ */
 
 class User extends Authenticatable
 {
-    use HasFactory, Notifiable;
+    use HasFactory, Notifiable, HasApiTokens;
 
     /**
      * The attributes that are mass assignable.
